--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="index.css" />
     </head>
 
-    <body style="font-size: 16px">
+    <body style="font-size: 18px">
         <div style="width: 50%; margin: 0 auto">
             <winter-audio-player title="ramp wave">
                 <source
@@ -18,6 +18,17 @@
                 src="https://storage.googleapis.com/files.winterbloom.com/gemini/ramp_filtered.mp3"
                 loop>
             </winter-audio-player>
+
+            <winter-carousel>
+                <img src="./resources/17-hardware-pot-nuts-1.webp" />
+                <img src="./resources/17-hardware-pot-nuts-2.webp" />
+                <img src="./resources/17-hardware-pot-nuts-3.webp" />
+                <img src="./resources/17-hardware-pot-nuts-4.webp" />
+                <img src="./resources/17-hardware-pot-nuts-5.webp" />
+                <img src="./resources/17-hardware-pot-nuts-6.webp" />
+                <img src="./resources/17-hardware-pot-nuts-7.webp" />
+                <img src="./resources/17-hardware-pot-nuts-8.webp" />
+            </winter-carousel>
         </div>
     </body>
 
