--- a/demo/index.html
+++ b/demo/index.html
@@ -51,6 +51,15 @@
             </winter-audio-player>
           </p>
           <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum
+          </p>
+          <p>
             <winter-audio-player
               title="Ramp wave with filter"
               src="https://storage.googleapis.com/files.winterbloom.com/gemini/ramp_filtered.mp3"
