Add winter-icon and winter-dark-mode

--- a/demo/index.html
+++ b/demo/index.html
@@ -82,6 +82,8 @@
         </article>
       </div>
     </section>
+
+    <winter-dark-mode></winter-dark-mode>
   </body>
 
   <script type="module" src="winter.js"></script>
