--- a/demo/index.html
+++ b/demo/index.html
@@ -79,6 +79,47 @@
               <img src="./images/17-hardware-pot-nuts-8.webp" />
             </winter-carousel>
           </p>
+          <h2>Image map</h2>
+          <p>
+            <winter-image-map src="./images/kit-contents.svg">
+              <winter-image-map-item id="mainboard"
+                >Mainboard</winter-image-map-item
+              >
+              <winter-image-map-item id="faceplate"
+                >Faceplate</winter-image-map-item
+              >
+              <winter-image-map-item id="jacks"
+                >1/8" jacks (8)</winter-image-map-item
+              >
+              <winter-image-map-item id="jack-nuts"
+                >Hex nuts for the 1/8" jacks (8)</winter-image-map-item
+              >
+              <winter-image-map-item id="power-header"
+                >Eurorack power header</winter-image-map-item
+              >
+              <winter-image-map-item id="rubber-bands"
+                >Rubber bands (2)</winter-image-map-item
+              >
+              <winter-image-map-item id="big-knob"
+                >Big knob</winter-image-map-item
+              >
+              <winter-image-map-item id="small-knob"
+                >Small knobs (3)</winter-image-map-item
+              >
+              <winter-image-map-item id="trimpots"
+                >Tall trimmer pots (3)</winter-image-map-item
+              >
+              <winter-image-map-item id="pots"
+                >9mm pots (4)</winter-image-map-item
+              >
+              <winter-image-map-item id="pot-washers"
+                >Washers for 9mm pots (4)</winter-image-map-item
+              >
+              <winter-image-map-item id="pot-nuts"
+                >Nuts for 9mm pots (4)</winter-image-map-item
+              >
+            </winter-image-map>
+          </p>
         </article>
       </div>
     </section>
