--- a/src/winter/base.html
+++ b/src/winter/base.html
@@ -63,7 +63,7 @@
               <winter-icon>search</winter-icon>
             </li>
             <li>
-              <winter-icon>dark_mode</winter-icon>
+              <winter-dark-mode></winter-dark-mode>
             </li>
           </ul>
         </nav>
