Hide search icon when search isn't enabled

--- a/src/winter/base.html
+++ b/src/winter/base.html
@@ -59,9 +59,11 @@
             {%- endfor -%}
           </ul>
           <ul>
-            <li>
-              <winter-icon>search</winter-icon>
-            </li>
+            {%- if 'search' in config.plugins -%}
+              <li>
+                <winter-icon>search</winter-icon>
+              </li>
+            {%- endif -%}
             <li>
               <winter-dark-mode></winter-dark-mode>
             </li>
