--- a/src/winter/base.html
+++ b/src/winter/base.html
@@ -10,13 +10,16 @@
       <!-- Title -->
       {%- block html_title -%}
         <title>
-          {% if page and page.title and not page.is_homepage %}
-            {{
-              page.title |
-              striptags
-            }}
-            -
-          {% endif %}{{ config.site_name }}
+          {{ config.site_name }}
+          {% if page and page.meta and page.meta.title %}
+            {% set title = page.meta.title %}
+          {% elif page %}
+            {% set title = page.title %}
+          {% endif %}
+
+          {% if title and not page.is_homepage %}
+            - {{ title | striptags }}
+          {% endif %}
         </title>
       {%- endblock html_title -%}
 
